--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -5,14 +5,14 @@
   position: relative;
   margin-top: $padding-md;
   padding-top: $padding-sm;
-  padding-bottom: $padding-sm;
+  padding-bottom: $padding-sm + $padding-xs;
   &::before {
     top: 0;
     left: 0;
     z-index: 0;
     width: 100%;
     content: '';
-    height: 276px;
+    height: 296px;
     position: absolute;
     background-image: url('../images/newsletter-shape.svg');
     background-size: auto 100%;
@@ -31,10 +31,12 @@
   }
 
   @include media-lg {
-    padding-top: 112px;
+    padding-top: 132px;
     padding-bottom: 112px;
     &::before {
-      width: 50%;
+      right: 50%;
+      left: auto;
+      width: 50vw;
       height: 424px;
     }
   }
@@ -49,14 +51,28 @@
 
     .input-wrap {
       flex: 1;
+      padding-right: 20px;
     }
 
     input {
       border-color: color('white');
     }
 
+    @include media-md {
+      padding-top: 24px;
+
+      p {
+        margin-bottom: $padding-xs * 2;
+      }
+
+      .button {
+        margin-top: -20px;
+      }
+    }
+
     @include media-lg {
       margin-bottom: 0;
+      padding-top: 0;
       background: none;
       padding-right: $padding-md;
     }
@@ -67,22 +83,19 @@
 footer.site-footer {
   position: relative;
   padding-bottom: 24px;
-  margin-top: $padding-sm;
   @include media-md {
-    margin-top: 310px;
+    margin-top: 11px;
     padding-bottom: 40px;
   }
-  @include media-lg {
-    margin-top: 220px;
-  }
   @include media-xl {
-    margin-top: 410px;
+    margin-top: 122px;
   }
 
   .footer-character {
     bottom: 0;
     z-index: -1;
-    max-width: 1173px;
+    width: 100%;
+    max-width: 560px;
     position: absolute;
     pointer-events: none;
 
@@ -92,7 +105,7 @@ footer.site-footer {
       transform: none;
     }
     @include media-md {
-      width: 62%;
+      width: 50%;
     }
   }
 
